Bug 117044 - EDITING: LibO6.1 alpha crash when attempting to edit a table definition.
Summary: EDITING: LibO6.1 alpha crash when attempting to edit a table definition.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: highest critical
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0
Keywords: bibisected, bisected, regression
: 117096 (view as bug list)
Depends on:
Blocks: Database-Firebird-Migration
  Show dependency treegraph
 
Reported: 2018-04-16 16:57 UTC by Drew Jensen
Modified: 2018-04-19 08:25 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
test file, with embedded hsql data (4.88 KB, application/vnd.oasis.opendocument.database)
2018-04-16 16:57 UTC, Drew Jensen
Details
crash drump (344.58 KB, application/vnd.tcpdump.pcap)
2018-04-16 16:58 UTC, Drew Jensen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Drew Jensen 2018-04-16 16:57:52 UTC
Created attachment 141400 [details]
test file, with embedded hsql data

test system: Ubuntu 64bit (17.10), Libo6.1alpha Build ID:110a9e2604e835fff9fcd6053b1d7e5f92b92e8e

Steps to reproduce.
Open attached ODB file.
Go to tables section.
App asks if you want to migrate to firebird. Answer yes or no (crash happens either way)
Select table
Select Edit
Crash
Comment 1 Drew Jensen 2018-04-16 16:58:55 UTC
Created attachment 141401 [details]
crash drump
Comment 2 Xisco Faulí 2018-04-16 18:30:46 UTC
Wow, this is a really fast catch!

Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2018-04-16 08:28:16 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2018-04-16 10:42:01 +0200
commit 0973e1f4e727a3204c843398bcb0e6a411b1a02d (patch)
tree 954d190ad385f5bb9a3ab2d763403468f0f66b62
parent 914f6385d98f8c898102c971a4d5b0eb9f075ef0 (diff)
follow on for tdf#116981
the previous commit 235d61890512894e27f4f81e38a325eee3c67b30, fixed just
exactly the problem reported in tdf#116981.

Bisected with: bibisect-linux64-6.1 

Adding Cc: to Noel Grandin
Comment 3 Xisco Faulí 2018-04-17 11:13:13 UTC
it also crashes if I try to edit the table 'EmployeesTasks' from attachment 141317 [details]
Comment 4 Commit Notification 2018-04-18 13:42:04 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fd73aa73519fa9cd9242aafacfad434a4a0fb6f8

tdf#117044 Base crash when attempting to edit a table definition

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2018-04-18 15:16:22 UTC
Verified in

Version: 6.1.0.0.alpha0+
Build ID: b07e8a7e16ba69e822a309ec280d1987f90021a3
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

Noel, thanks for fixing this!!
Comment 6 Xisco Faulí 2018-04-19 08:25:12 UTC
*** Bug 117096 has been marked as a duplicate of this bug. ***